--- a/Manual De Identidad/index (1).html
+++ b/Manual De Identidad/index (1).html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Refugio De Lectores</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/recortada.jpg" />
+        <link rel="icon" type="image/x-icon" href="assets/recortada.jpg" />
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
@@ -16,7 +16,7 @@
     <body id="page-top">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="../plantilla.html">INICIO</a>
+                <a class="navbar-brand js-scroll-trigger" href="../index.html">INICIO</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -58,7 +58,7 @@
         <section class="projects-section bg-light" id="projects">
             <div class="container">
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/libros.jpg" alt="" /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/libros.jpg" alt="" /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4 class="text-black">SLOGAN
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/df32cb0e-c890-4e22-9dc2-6b7a41eee78b.png" alt="" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/df32cb0e-c890-4e22-9dc2-6b7a41eee78b.png" alt="" /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/nombre.jpg" alt="" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/nombre.jpg" alt="" /></div>
                                     <div class="col-lg-12 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
